--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,20 +9,23 @@ description = "A server that hosts a website to play DnD with your friends!"
 
 [dependencies]
 argon2 = { version = "0.5", features = ["std"] }
-async-sqlite = "0.2"
-# async-sqlite = { version = "0.2", default-features = false }
 axum = "0.7"
 axum-extra = { version = "0.9", features = ["cookie", "cookie-private"] }
 axum-macros = { version = "0.4", optional = true }
-chrono = "0.4"
+chrono = { version = "0.4", features = ["serde"] }
 clap = { version = "4.5", features = ["derive"] }
+enum-debug = { git = "https://github.com/Lut99/enum-debug", features = ["derive"] }
 error-trace = { git = "https://github.com/Lut99/error-trace-rs" }
 humanlog = { git = "https://github.com/Lut99/humanlog-rs" }
 hyper = "1.2"
 hyper-util = { version = "0.1", default-features = false, features = ["server"] }
 log = "0.4"
+parking_lot = "0.12"
+rand = "0.8"
+rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
 rustls-pemfile = "2.1"
 serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 tokio = { version = "1.33", default-features = false, features = ["fs", "macros", "rt", "rt-multi-thread", "signal"]}
 tokio-rustls = "0.26"
 toml = "0.8"
