--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ parking_lot = "0.12"
 rand = "0.8"
 rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
 rustls-pemfile = "2.1"
+semver = { version = "1.0", features = ["serde"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "1.33", default-features = false, features = ["fs", "macros", "rt", "rt-multi-thread", "signal"]}
