--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ tokio = { version = "1.33", default-features = false, features = ["fs", "macros"
 tokio-rustls = "0.26"
 toml = "0.8"
 tower = { version = "0.4", features = ["make"] }
+tower-http = { version = "0.5", features = ["fs"] }
 tower-service = "0.3"
 
 
